feat: route animations

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <title></title>
   </head>
   <body>
-    <div id="app" v-cloak>
-      <router-view></router-view>
-    </div>
+    <div id="app" v-cloak></div>
     <script type="module" src="./src/app.js"></script>
   </body>
 </html>
