--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="preload"
-      href="/fonts/font-oblique.woff2"
+      href="/fonts/font-medium-oblique.woff2"
       as="font"
       type="font/woff2"
       crossorigin
