--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     <div id="app" v-cloak></div>
-    <script type="module" src="./src/app.js"></script>
+    <script type="module" src="/src/app.js"></script>
   </body>
 </html>
