--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
       href="/fonts/font-medium-oblique.woff2"
       as="font"
       type="font/woff2"
-      crossorigin
+      crossorigin 
+    /> 
+    <link 
+    rel="icon" 
+    type="image/svg+xml" 
+    href="/favicon.svg"
     />
+    <link rel="alternate icon" href="/favicon.ico"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
